--- a/documentation/Changelog.txt
+++ b/documentation/Changelog.txt
@@ -1,3 +1,10 @@
+Version 1.3 (April 2023)
+
+New Features
+- Updated the PS API endpoint to coincide with their internal changes.
+- New modules were added (Sampler, Logic Gate), so the app now supports those.
+- Upgraded backend UI to PySide6.
+
 Version 1.2 (March 2022)
 
 New Features
