--- a/documentation/Changelog.txt
+++ b/documentation/Changelog.txt
@@ -1,3 +1,9 @@
+Version 1.3.1 (November 2024)
+Fixes
+- Fixed a bug with the data.json format, related to page counts in the API return. (Major, app would not open otherwise)
+- Fixed an issue with downloading samples from zipped patches.
+- Bumped versions of various libraries.
+
 Version 1.3 (January 2024)
 
 New Features
