--- a/documentation/Changelog.txt
+++ b/documentation/Changelog.txt
@@ -1,3 +1,15 @@
+Version 1.4 (December 2024)
+New Features
+- New modules were added (Reverse Delay, Univibe), so the app now includes those in the Visualizer and Expander views.
+- Patches on PS may now be modified using PUT requests through the API. # TODO
+- Updated Sequencer module block logic for new options.
+- The Local Storage and Folder tabs now sort by latest download by default.
+
+Fixes
+- Adjusted behavior of SD card export if multiple patches share the same slot number.
+- Version History imports no longer add empty patch files.
+- Removed numpy requirement.
+
 Version 1.3.2 & 1.3.1 (November 2024)
 Fixes
 - Removed bs4 requirement for html parsing, using API instead.
