--- a/documentation/Changelog.txt
+++ b/documentation/Changelog.txt
@@ -1,21 +1,29 @@
 Version 1.4 (December 2024)
+
 New Features
 - New modules were added (Reverse Delay, Univibe), so the app now includes those in the Visualizer and Expander views.
-- Patches on PS may now be modified using PUT requests through the API. # TODO
-- Updated Sequencer module block logic for new options.
-- The Local Storage and Folder tabs now sort by latest download by default.
+    - Also updated the Sequencer module logic for new options.
+- Patches on PS may now be modified using PUT requests through the API.
+    - Note that users are only allowed to update patches they authored.
+    - Currently, only single-versioned patches can be modified (versions are a complicated case).
+- Local PS patches are now updated to utilize the new API version & metadata.
+    - The first time you load up 1.4, it may take longer than usual to open.
+    - Subsequent loads will go back to normal after the files are updated.
+- The Local Storage and Folder tabs now sort by latest download date by default.
 
 Fixes
+- Simplified the process for uploading patches with the API.
 - Adjusted behavior of SD card export if multiple patches share the same slot number.
 - Version History imports no longer add empty patch files.
-- Removed numpy requirement.
-
-Version 1.3.2 & 1.3.1 (November 2024)
-Fixes
-- Removed bs4 requirement for html parsing, using API instead.
 - Fixed a bug with the data.json format, related to page counts in the API return.
 - Fixed an issue with downloading samples from zipped patches.
 - Bumped versions of various libraries.
+- Removed numpy requirement.
+- Removed bs4 requirement for html parsing, using API instead.
+
+Plans
+- At this point, the app is nearly feature-complete, so future updates will be limited in scope to fix bugs and address minor things.
+    - Patch editing/creation is a notable exception, however patience is recommended there.
 
 Version 1.3 (January 2024)
 
@@ -51,8 +59,6 @@ Fixes
 
 Known Issues
 - With the old alpha API endpoint being phased out, older versions of the application will no longer support PS-related functions.
-- Feedback loops/recursive patches will not fully show within the Expander.
-    - This is due to complexities with the auto-layout algorithm and to avoid crashes.
 
 Future Plans
 - Optimize the Patch Expander with a new layout algorithm, variable views, and other useful features.
@@ -97,7 +103,6 @@ Fixes
 Known Issues
 - Feedback loops/recursive patches will not fully show within the Expander.
     - This is due to complexities with the auto-layout algorithm.
-    - Optimizations will be coming in the next version.
 
 Future Plans
 - Further optimize the Patch Expander with variable views and other useful features.
